endpoint and review changes part two
