# src/routes.ts
@@ -11,10 +11,11 @@ export const router = Router();
 router.post('/user/', userAccountsController.createNewUserId)
 router.post('/user/:userId/login/', userAccountsController.newJSONWebToken)
 
+router.get('/user/:userId/', authUser, userAccountsController.checkAdminStatus)
+
 router.patch('/user/:userId/', authAdmin, userAccountsController.grantAdminRequest)
 
 router.post('/admin/:userId/login/', userAccountsController.newAdminToken)
-router.get('/admin/:userId/login/', userAccountsController.checkAdminStatus)
 
 router.get('/infection/:userId/', authUser, infectionController.getInfection)
 router.post('/infection/:userId/', authUser, infectionController.postInfection)
